syntax="proto3";
option go_package="./proto/user";
package user;

service User{
  rpc Registry(RegistryRequest) returns(Response){};
  rpc Login(LoginRequest) returns(Response){};
  rpc SendEmial(EmailRequest) returns(Response){};
  rpc UpdateScore(UpdateRequest) returns(Response){};
  rpc GetUserScore(EmailRequest) returns(ScoreResponse){};
}

message ScoreResponse{
  int32 code=1;
  string msg=2;
  int32 score=3;
}


message UpdateRequest{
  int32 id=1;
  int32 score=2;
}

message EmailRequest{
  string email=1;
}

message LoginRequest{
  string email=1;
  string password=2;
}

message Response{
  int32 code=1;
  string msg=2;
}

message RegistryRequest{
  string email=1;
  string password=2;
  string code=3;
}